--- a/guanyu.html
+++ b/guanyu.html
@@ -23,13 +23,13 @@
 			</div>
 			<div class="nav">
 				<ul>
-					<li><a href="">首页</a></li>
-					<li class="lan"><a href=""  class="se">关于德创</a></li>
-					<li><a href="">行业解决方案</a></li>
-					<li><a href="">产品技术中心</a></li>
-					<li><a href="">客户案例</a></li>
-					<li><a href="">新闻中心</a></li>
-					<li><a href="">联系我们</a></li>
+					<li><a href="https://wolf-wh.github.io/qiyewangzhan/">首页</a></li>
+					<li class="lan"><a href="https://wolf-wh.github.io/qiyewangzhan/guanyu.html" class="se">关于德创</a></li>
+					<li><a href="https://wolf-wh.github.io/qiyewangzhan/hangye.html">行业解决方案</a></li>
+					<li><a href="https://wolf-wh.github.io/qiyewangzhan/changpin.html">产品技术中心</a></li>
+					<li><a href="https://wolf-wh.github.io/qiyewangzhan/kehu.html">客户案例</a></li>
+					<li><a href="https://wolf-wh.github.io/qiyewangzhan/xinwen.html">新闻中心</a></li>
+					<li><a href="https://wolf-wh.github.io/qiyewangzhan/women.html">联系我们</a></li>
 				</ul>
 			</div>
 		</div>
