--- a/guanyu.html
+++ b/guanyu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>关于德创</title>
+	<title>关于</title>
 	<link rel="stylesheet" href="css/guanyu.css">
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_487681_kpg3mggyv5pwg66r.css">
 </head>
