--- a/xinwen.html
+++ b/xinwen.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>新闻中心</title>
 	<link rel="stylesheet" href="css/xinwen.css">
-	<link rel="stylesheet" href="http://at.alicdn.com/t/font_487681_kpg3mggyv5pwg66r.css">
+	<link rel="stylesheet" href="https://at.alicdn.com/t/font_487681_kpg3mggyv5pwg66r.css">
 </head>
 <body>
 	<div class="banner">
