--- a/changpin.html
+++ b/changpin.html
@@ -93,18 +93,19 @@
 					<h2>电力行业</h2>
 				</div>
 				<div class="goods">
-					<img src="img/changpin/s_091e388c871d72b29772707fce29e110 (1).png" alt="" width="155" height="90">
+					<img src="img/changpin/s_7a17152ab1db609da2a1f8a76c6d953d.jpg" alt="" width="155" height="90">
 					<div class="con">
 						<div class="top_con">
-							<a href="">电力智能周转柜</a>
+							<a href="">自动货柜</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>
+							自动垂直提升柜
+							自动回转柜
+							1、自动回转柜
+							    1）硬件结构
+							垂直旋转柜由主体框架、可移式箱斗、驱动系统、传动系统、工作平台、蒙皮外壳、自动控制系统、管理系统、平衡控制系统、功能显示系统、安全保护...
+						</p>
 					</div>
 				</div>
 				<div class="goods">
@@ -114,57 +115,66 @@
 							<a href="">电力智能周转柜</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>
+							1、设备特点
+							² 占地面积小—5个平方，220V电源。
+							² 存储密度大—2.2L*2.2W*2.4H,10个立方空间内，最大可支持超过1000个单相（电能表）单位的存储。
+							² 存储类型齐—可存储类型包括单...
+						</p>
 					</div>
 				</div>
 				<div class="goods">
 					<img src="img/changpin/s_782ae74d71f741d9948b0d001bc99a21.png" alt="" width="155" height="90">
 					<div class="con">
 						<div class="top_con">
-							<a href="">电力智能周转柜</a>
+							<a href="">微型立库</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>
+							1、硬件结构
+							自动化微型立库由货架，驱动机械手（直角坐标机器人）、入(出)库工作台、称重系统（选配）、控制系统及管理系统组成。通过驱动机械手实现料箱自动取放操作，通过管理系统实现物品的有效增减管理。
+							2、设备功能：
+							1）存储功能
+							存储轴承...
+						</p>
 					</div>
 				</div>
 				<div class="goods">
 					<img src="img/changpin/s_85a1a9054dbd0099952c570ff31c3e3c.png" alt="" width="155" height="90">
 					<div class="con">
 						<div class="top_con">
-							<a href="">电力智能周转柜</a>
+							<a href="">智能办公柜</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>
+							1）设备功能
+							自动档案柜可存放科技档案、文件档案、人事档案、财务凭证档案、图纸档案等。
+							2）设备特点
+							自动档案柜是在循环柜基础上开发的专门适合档案存放的产品。
+							具有以下优点：
+							最大限度的利用最小的占地面积；
+							高密度仓储增大仓储面积；...
+						</p>
 					</div>
 				</div>
 				<div class="goods">
 					<img src="img/changpin/s_d8a47bfeaf4a59a268ff441f4d88b457.png" alt="" width="155" height="90">
 					<div class="con">
 						<div class="top_con">
-							<a href="">电力智能周转柜</a>
+							<a href="">仓储信息管理系统</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>
+							一、系统架构
+							二、系统特点
+							三、精细化物流管理
+							四、物资可追溯
+							五、主要功能介绍
+							一、系统架构
+							二、系统特点
+							适用于多物流中心组织、多货主、多物流模式（VMI/JMI等）
+							•	丰富的储位信息(仓间、仓位、存储区..
+						</p>
 					</div>
 				</div>
 			</div>
