--- a/hangye.html
+++ b/hangye.html
@@ -108,33 +108,25 @@
 					</div>
 				</div>
 				<div class="goods">
-					<img src="img/hangye/s_b6fe454b36093d257a56055ca454f00b.jpg" alt="" width="155" height="90">
+					<img src="img/hangye/s_ef7bad7be2f268bc982cf6310076f702.png" alt="" width="155" height="90">
 					<div class="con">
 						<div class="top_con">
-							<a href="">电力智能周转柜</a>
+							<a href="">电力计量生产调度控制系统</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>1、前言
+   电能表自动化检定调度控制系统适用于电网公司及电能表制造厂家等相关单位的单、三相电能表、低压互感器以及采集终端的自动化检定调度、控制与管理，该系统融合了现代机械设计及智能调度、监控理念，并集成了高精度图像识...</p>
 					</div>
 				</div>
 				<div class="goods">
-					<img src="img/hangye/s_b6fe454b36093d257a56055ca454f00b.jpg" alt="" width="155" height="90">
+					<img src="img/hangye/s_f67c05188b6bc7a69cae8501f4553867.png" alt="" width="155" height="90">
 					<div class="con">
 						<div class="top_con">
-							<a href="">电力智能周转柜</a>
+							<a href="">电力计量自动化流水线</a>
 							<i class="">2017-04-13</i>
 						</div>
-						<p>一、前言
-							目前全国供电所普遍存在：
-							1、营销业务领配表流程存在线上、线下不一致,基础数据以人工台账为主；
-							2、各供电所存储条件不一，存在脏、乱现象；
-							3、月初、月末工作强度大、人员管理难度大；
-							4、所有实物领用需要人工审核、记账、仓库管理员...</p>
+						<p>1、前言
+目前智能电能表已经在国内大规模安装应用，传统的电能表检定方式与管理方法，人工介入环节较多，管理标准、技术标准、工作标准不一致，标准设备配置参差不齐，资源相对分散，工作效率较低，运营成本较高，难以保证检定标准和检定结果的高度一致，难..</p>
 					</div>
 				</div>
 			</div>
