--- a/kehu.html
+++ b/kehu.html
@@ -55,43 +55,67 @@
 					<li>
 						<a href="">
 							<i class="iconfont icon-arrow-up"></i>
-							<span>企业概括</span>
+							<span>浙江电力</span>
 						</a>
 					</li>
 					<li>
 						<a href="">
 							<i class="iconfont icon-iconfontyoujiantou shang"></i>
-							<span class="bian">发展历程</span>
+							<span class="bian">贵州电力</span>
 						</a>
 					</li>
 					<li>
 						<a href="">
 							<i class="iconfont icon-iconfontyoujiantou shang"></i>
-							<span class="bian">组织架构</span>
+							<span class="bian">辽宁电力</span>
 						</a>
 					</li>
 					<li>
 						<a href="">
 							<i class="iconfont icon-iconfontyoujiantou shang"></i>
-							<span class="bian">荣誉资质</span>
+							<span class="bian">浙江电力</span>
 						</a>
 					</li>
 					<li>
 						<a href="">
 							<i class="iconfont icon-iconfontyoujiantou shang"></i>
-							<span class="bian">发明专利</span>
+							<span class="bian">浙江中烟</span>
 						</a>
 					</li>
 					<li>
 						<a href="">
 							<i class="iconfont icon-iconfontyoujiantou shang"></i>
-							<span class="bian">发展愿景</span>
+							<span class="bian">浙江港航</span>
 						</a>
 					</li>
 					<li>
 						<a href="">
 							<i class="iconfont icon-iconfontyoujiantou shang"></i>
-							<span class="bian">团队文化</span>
+							<span class="bian">威盛集团</span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i class="iconfont icon-iconfontyoujiantou shang"></i>
+							<span class="bian">海心集团</span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i class="iconfont icon-iconfontyoujiantou shang"></i>
+							<span class="bian">炬华科技</span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i class="iconfont icon-iconfontyoujiantou shang"></i>
+							<span class="bian">杭可科技</span>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<i class="iconfont icon-iconfontyoujiantou shang"></i>
+							<span class="bian">机电学院</span>
 						</a>
 					</li>
 				</ul>
@@ -102,7 +126,20 @@
 				</div>
 				<p class="neirong">
 					浙江自动化检定流水线系统整体建设规模：单相电能表自动化检定系统检定表位数：2700表位，年检定能力≥500万只，三相电能表自动化检定系统检定表位数：720表位，年检定能力≥40万只，低压电流互感器自动化检定系统检定表位数：36表位，年检定能力≥40万只。该系统技术先进、运行可靠、性能优良，全面实现了单相电能表检定的标准化、自动化、智能化。具备全自动检定、关键作业环节实施监控、运行过程无人工干预的特点，实现了计量检定技术的大跨越。
+					<br>
+					该检定系统主要包括物料输送系统、机器人上下料系统、自动检定系统、生产调度平台等功能模组，系统将物联网技术应用于整个检定生产过程中，融合了国际先进的自动传输、机器人控制、光电信息及计算机网络等多种技术，可实现物料自动传输、识别分拣、自动定位、自动压接、自动检定、温度监控、图像识别、故障判定与处理等，全部过程均由生产调度平台与检定管理系统等协调控制完成，已申报受理专利92项，其中发明专利33项，最终专利数量将超过100项。
+					<br>
+					该项目建成后，消除人为和地域因素引起的检定质量差异，有效提高检定效率、计量管理水平。实现省级计量检定整体授权，大大增强国网公司系统计量工作的管控力和影响力，进一步提高计量的透明度、公信力，确保准确公正计量，塑造国网公司良好的服务形象。）
 				</p>
+				<img src="img/kehu/f_b58844cb0146f061c9bd80802d6945f7.png" alt="" width="811" height="411">
+				<p style="text-align: center" class="nrr">浙江电力计量中心嘉兴四线一库项目</p>
+				<p class="nr">仓前项目单相电能表自动化检定系统检定表位数：2700表位，年检定能力≥500万只；</p>
+				<img src="img/kehu/f_ad5c93096902e53e631416e90e956cda.png" alt="" width="811" height="467">
+
+				<p style="text-align: center" class=nr>浙江电力计量中心杭州仓前项目单相自动化检定流水线项目</p>
+				<img src="img/kehu/f_7450657d3186518f62889daf0ea2b122.png" alt="" width="557" height="337">
+				<p style="text-align: center" class=nr>浙江省电力公司计量中心生产调度平台</p>
+				<img src="img/kehu/f5.jpg" alt="" width="811" height="459">
 				<div class="sj">最后编辑：dechuang 于 2017-06-28 09:59:59</div>
 			</div>
 		</div>
