--- a/xinwen.html
+++ b/xinwen.html
@@ -70,10 +70,80 @@
 				<div class="top">
 					<h2>浙江电力</h2>
 				</div>
-				<p class="neirong">
-					浙江自动化检定流水线系统整体建设规模：单相电能表自动化检定系统检定表位数：2700表位，年检定能力≥500万只，三相电能表自动化检定系统检定表位数：720表位，年检定能力≥40万只，低压电流互感器自动化检定系统检定表位数：36表位，年检定能力≥40万只。该系统技术先进、运行可靠、性能优良，全面实现了单相电能表检定的标准化、自动化、智能化。具备全自动检定、关键作业环节实施监控、运行过程无人工干预的特点，实现了计量检定技术的大跨越<br>
-					浙江自动化检定流水线系统整体建设规模：单相电能表自动化检定系统检定表位数：2700表位，年检定能力≥500万只，三相电能表自动化检定系统检定表位数：720表位，年检定能力≥40万只，低压电流互感器自动化检定系统检定表位数：36表位，年检定能力≥40万只。该系统技术先进、运行可靠、性能优良，全面实现了单相电能表检定的标准化、自动化、智能化。具备全自动检定、关键作业环节实施监控、运行过程无人工干预的特点，实现了计量检定技术的大跨越<br>
-				</p>
+				<ul class="neirong">
+					<li>
+						<a href="">
+							<p>公司消防安全培训</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>德创成功承办人工智能与机器人技术高级研修班</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>德创电子名称变更通知</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>德创电子组织公司员工户外活动</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>德创《迁建项目竣工环保验收基本情况报告表》公示</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>德创参展2016亚洲国际物流技术与运输系统展览会</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>德创2016年新员工拓展训练</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>2016年8月浙江省汽车工业技术创新协会会长来公司莅临指导。</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>2016年7月德创电子中标</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>2016年6月德创电子中标</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>国网浙江电力公司电能计量检定基地进场实施</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<p>2015年6月德创电子乔迁</p>
+							<p>2017-11-20</p>
+						</a>
+					</li>
+				</ul>
 				<div class="sj">最后编辑：dechuang 于 2017-06-28 09:59:59</div>
 			</div>
 		</div>
