--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>企业网站</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="https://at.alicdn.com/t/font_487681_kpg3mggyv5pwg66r.css">
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/index.js"></script>
 </head>
 <body>
 	<div class="banner">
@@ -33,7 +35,7 @@
 				</ul>
 			</div>
 			<div class="dianqu">
-				<div class="dian"></div>
+				<div class="dian d-frist"></div>
 				<div class="dian"></div>
 				<div class="dian"></div>
 			</div>
