--- a/yuanchaung.html
+++ b/yuanchaung.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="css/guanyu.css">
+    <link rel="stylesheet" href="css/yuanchuang.css">
     <script src="js/index.js"></script>
 </head>
 <body>
@@ -40,16 +40,56 @@
             <b>您当前的位置：</b>
             <a href="">首页</a>
             <em>></em>
-            <a href="">关于我们</a>
+            <a href="">原创作品</a>
         </div>
     </div>
     <div class="content">
-        <div class="con_neirong">
-            <div class="con_pic"></div>
-            <p>厦门台北时尚婚纱摄影旗下高端摄影品牌兰蒂摄影成立于2016.9.15日</p>
-            <span class="wenben">《兰蒂摄影》走的是品牌路线，实行作品品质和服务品质双轨并进。“高品位、高品质、高要求”不仅是兰蒂摄影对自身的要求，也是对每位新人的承诺！引导市场潮流，带动市场品位，《兰蒂摄影》将婚纱摄影做了全新的诠释！ </span>
+        <div class="con_left">
+            <div class="conl_top">
+                <div class="conlt_title">潮流客片</div>
+                <a href="">兰蒂婚纱摄影</a>
+            </div>
+            <div class="conl_bottom">
+                <div class="conlb_title">新闻动态</div>
+                <div class="conlb_content">
+                    <pre class="conlbc_son">·   <海 情></pre>
+                    <pre class="conlbc_son">·   <兰蒂摄影></pre>
+                    <pre class="conlbc_son">·   <厦门沙滩冲浪></pre>
+                    <pre class="conlbc_son">·   厦门婚纱摄影工作室</pre>
+                </div>
+            </div>
         </div>
-        <div class="xiabai"></div>
+        <div class="con_right">
+            <div class="conr_black">
+                <div class="conrb_all"><a href="">全部</a></div>
+                <div class="conrb_yuan"><a href="">原创作品</a></div>
+            </div>
+            <div class="conrb_fson">
+                <a href="">
+                    <h3>厦门婚纱摄影工作室 <span>2017-10-29</span></h3>
+                    <span class="xuxian"></span>
+                </a>
+            </div>
+            <div class="conrb_fson">
+                <a href="xiangqing.html">
+                    <h3><厦门沙滩冲浪> <span>2017-10-29</span></h3>
+                    <span class="xuxian"></span>
+                </a>
+            </div>
+            <div class="conrb_fson">
+                <a href="">
+                    <h3><兰蒂摄影> <span>2017-10-29</span></h3>
+                    <span class="xuxian"></span>
+                </a>
+            </div>
+            <div class="conrb_fson">
+                <a href="">
+                    <h3><海 情> <span>2017-10-29</span></h3>
+                    <span class="xuxian"></span>
+                </a>
+            </div>
+            <div class="jilu">共 4 条记录 1 页</div>
+        </div>
     </div>
     <div class="footers">
         <div class="erweima">
@@ -64,5 +104,6 @@
             <a href="">网站</a>
             <a href="">HTML CSS</a>
         </p>
-    </div></body>
+    </div>
+</body>
 </html>
