--- a/index.html
+++ b/index.html
@@ -1,137 +1,151 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>企业网站</title>
-	<link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="https://at.alicdn.com/t/font_487681_kpg3mggyv5pwg66r.css">
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/index.js"></script>
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_487003_q3e13kdonnbwewmi.css">
+    <script src="js/index.js"></script>
 </head>
 <body>
-	<div class="banner">
-		<div class="neikuan">
-			<div class="top">
-				<a href="" class="left"></a>
-				<div class="right">
-					<div class="tel">
-						<span>0571-88609180</span>
-					</div>
-					<form action="" class="sou">
-						<input type="text" class="shuru">
-						<input type="button" class="iconfont sousuo" value="&#xe60c;" >
-					</form>
-				</div>
-			</div>
-			<div class="nav">
-				<ul>
-					<li class="lan"><a href="https://wolf-wh.github.io/qiyewangzhan/" class="se">首页</a></li>
-					<li><a href="https://wolf-wh.github.io/qiyewangzhan/guanyu.html">关于德创</a></li>
-					<li><a href="https://wolf-wh.github.io/qiyewangzhan/hangye.html">行业解决方案</a></li>
-					<li><a href="https://wolf-wh.github.io/qiyewangzhan/changpin.html">产品技术中心</a></li>
-					<li><a href="https://wolf-wh.github.io/qiyewangzhan/kehu.html">客户案例</a></li>
-					<li><a href="https://wolf-wh.github.io/qiyewangzhan/xinwen.html">新闻中心</a></li>
-					<li><a href="https://wolf-wh.github.io/qiyewangzhan/women.html">联系我们</a></li>
-				</ul>
-			</div>
-			<div class="dianqu">
-				<div class="dian d-frist"></div>
-				<div class="dian"></div>
-				<div class="dian"></div>
-			</div>
-			<div class="bottom">
-				<div class="box">
-					<div class="box_top">
-						<span>行业解决方案</span>
-						<a href="">更多></a>
-					</div>
-					<div class="box_bottom">
-						<ul>
-							<li>
-								<a href=""><div class="yuan"></div>机器人集成设计及服务能力</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>输送系统</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>智能化仓储</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box_top">
-						<span>产品技术中心</span>
-						<a href="">更多></a>
-					</div>
-					<div class="box_bottom box_bottom1">
-						<ul>
-							<li>
-								<a href=""><div class="yuan"></div>输送系统集成设计咨询</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>服务治理系统</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>工业机器人集成</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box_top">
-						<span>成功案例</span>
-						<a href="">更多></a>
-					</div>
-					<div class="box_bottom box_bottom2">
-						<ul>
-							<li>
-								<a href=""><div class="yuan"></div>浙江电力</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>辽宁电力</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>贵州电力</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="box">
-					<div class="box_top">
-						<span>新闻中心</span>
-						<a href="">更多></a>
-					</div>
-					<div class="box_bottom box_bottom3">
-						<ul>
-							<li>
-								<a href=""><div class="yuan"></div>公司消防安全培训</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>关于2017年3季度绩效评估发布的决定</a>
-							</li>
-							<li>
-								<a href=""><div class="yuan"></div>德创成功承办人工智能与机器人技术高级研修班</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="bottom_ban">
-		<div class="quyu">
-			<div class="qu">
-				<span>版权所有 Copyright © 2015杭州德创电子股份有限公司 浙ICP备15043781号</span>
-				<div class="right">
-					<a href="">关于我们</a>
-					<span>|</span>
-					<a href="">联系我们</a>
-					<span>|</span>
-					<a href="">网站地图</a>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="log_nav">
+        <div class="ln_logo">
+            <div class="lnl_img"></div>
+        </div>
+        <div class="ln_nav">
+            <ul class="lnn_nav">
+                <li class="lnn_son"><a href="index.html">首页</a></li>
+                <li class="lnn_son"><a href="fashion.html">潮流客片</a></li>
+                <li class="lnn_son"><a href="yuanchaung.html">原创作品</a></li>
+                <li class="lnn_son"><a href="guanyu.html">关于我们</a></li>
+                <li class="lnn_son"><a href="zuixin.html">最新套系</a></li>
+                <li class="lnn_son"><a href="lianxi.html">联系我们</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="banner">
+        <div class="tu"><a href=""><img src="img/banner1.600" alt=""></a></div>
+        <div class="tu"><a href=""><img src="img/banner2.600" alt=""></a></div>
+        <div class="tu"><a href=""><img src="img/banner3.600" alt=""></a></div>
+        <div class="tu"><a href=""><img src="img/banner4.600" alt=""></a></div>
+        <div class="ban_circular">
+            <div class="banc_son" style="background-color: #E1472F"></div>
+            <div class="banc_son"></div>
+            <div class="banc_son"></div>
+            <div class="banc_son"></div>
+        </div>
+    </div>
+    <div class="yuanchuang_title">
+        <h4>原创作品</h4>
+        <div class="yct_more"><a href="">查看更多</a></div>
+    </div>
+    <div class="works_show">
+        <div class="worksshow_son">
+            <img src="img/works1.375" alt="">
+            <p><海 情></p>
+            <a href="">查看更多</a>
+        </div>
+        <div class="worksshow_son">
+            <img src="img/works2.375" alt="">
+            <p><兰蒂摄影></p>
+            <a href="">查看更多</a>
+        </div>
+        <div class="worksshow_son">
+            <img src="img/works3.375" alt="">
+            <p><厦门沙滩冲浪></p>
+            <a href="xiangqing.html">查看更多</a>
+        </div>
+        <div class="worksshow_son">
+            <img src="img/works4.375" alt="">
+            <p>厦门婚纱摄影工作室</p>
+            <a href="">查看更多</a>
+        </div>
+    </div>
+    <div class="Yachtzong">
+        <div class="Yacht">
+            <div class="iconfont ya_text">&#xe642;</div>
+            <div class="ya_texts">最爱游艇</div>
+        </div>
+        <div class="Yacht_right">
+            <form action="" method="post">
+                <input type="text" name="name" placeholder="请输入关键字...">
+                    <button type="submit">
+                        <i class="iconfont sousuo">&#xe699;</i>
+                    </button>
+            </form>
+        </div>
+    </div>
+    <div class="yuanchuang_title">
+        <h4>潮流客片</h4>
+        <div class="yct_more"><a href="">查看更多</a></div>
+    </div>
+    <div class="fashion">
+        <div class="fashion_title"><a href="">兰蒂婚纱摄影</a></div>
+        <div class="fashion_son">
+            <div class="fs_title">最爱游艇</div>
+            <img src="img/fashion1.338" alt="">
+            <div class="fs_more"><a href="">查看更多</a></div>
+        </div>
+        <div class="fashion_son">
+            <div class="fs_title">厦门海岸拍摄</div>
+            <img src="img/fashion2.338" alt="">
+            <div class="fs_more"><a href="">查看更多</a></div>
+        </div>
+        <div class="fashion_son">
+            <div class="fs_title">厦门旅拍</div>
+            <img src="img/fashion3.338" alt="">
+            <div class="fs_more"><a href="">查看更多</a></div>
+        </div>
+        <div class="fashion_son">
+            <div class="fs_title">厦门海景</div>
+            <img src="img/fashion4.338" alt="">
+            <div class="fs_more"><a href="">查看更多</a></div>
+        </div>
+        <div class="fashion_son">
+            <div class="fs_title">超跑</div>
+            <img src="img/fashion5.338" alt="">
+            <div class="fs_more"><a href="">查看更多</a></div>
+        </div>
+        <div class="fashion_son fashion_lastson">
+            <div class="fs_title">与你有约</div>
+            <img src="img/fashion6.338" alt="">
+            <div class="fs_more"><a href="">查看更多</a></div>
+        </div>
+    </div>
+    <div class="sikuai">
+        <div class="sikuai_center">
+            <div class="sc_son">
+                <div class="iconfont icon">&#xe604;</div>
+                <div class="scc_text">兰蒂婚纱摄影</div>
+            </div>
+            <div class="sc_son">
+                <div class="iconfont icon">&#xe6b6;</div>
+                <div class="scc_text">18059255243</div>
+            </div>
+            <div class="sc_son">
+                <div class="iconfont icon">&#xe605;</div>
+                <div class="scc_text">713030692@qq.com</div>
+            </div>
+            <div class="sc_son">
+                <div class="iconfont icon">&#xe633;</div>
+                <div class="scc_text">思明区环岛路观音山商业街A区502</div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom"></div>
+    <div class="footers">
+        <div class="erweima">
+            <div class="erweitu"></div>
+            <p>扫一扫访问移动端</p>
+        </div>
+        <p class="foot_top">厦门台北时尚婚纱摄影旗下品牌摄影工作室 厦门婚纱摄影 厦门旅游婚纱摄影工作室 厦门旅拍 厦门高端婚纱摄影 厦门 三亚 丽江 普吉岛 </p>
+        <p class="foot_bottom">
+            CopyRight © 版权所有:
+            <a href="">兰蒂婚纱摄影</a>
+            技术支持:
+            <a href="">网站</a>
+            <a href="">HTML CSS</a>
+        </p>
+    </div>
 </body>
 </html>
